# kite

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  changelog.md  compile_script.sh  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
Src/: CMakeLists.txt  main.cpp
Src/Hamiltonian/: Hamiltonian.cpp  HamiltonianDefects.cpp  HamiltonianRegular.cpp  HamiltonianVacancies.cpp
Src/Lattice/: LatticeStructure.cpp
Src/Simulation/: GlobalSimulation.cpp  Simulation.cpp  SimulationARPES.cpp  SimulationCondDC.cpp  SimulationCondOpt.cpp  SimulationCondOpt2.cpp  SimulationDOS.cpp  SimulationGaussianWavePacket.cpp  SimulationLMU.cpp  SimulationSingleShot.cpp
Src/Tools/: Gamma1D.cpp  Gamma2D.cpp  Gamma3D.cpp  queue.cpp
Src/Vector/: KPM_Vector.cpp  KPM_Vector2D.cpp  KPM_Vector3D.cpp  KPM_VectorBasis.cpp
Src/cmake/: CMakeLists.txt
about/: index.html
about/LICENSE/: index.html
about/VERSION/: index.html
api/: index.html
api/kite/: index.html
api/kite-tools/: index.html
api/kite_tools_readme/: index.html
api/kitex/: index.html
background/: index.html
background/spectral/: index.html
background/tight_binding/: index.html
cppcore/: CMakeLists.txt
cppcore/cmake/: copy.cmake  download.cmake  remove.cmake
cppcore/kitetools/: CMakeLists.txt  process_arpes.py  process_new.py  process_single_shot.py
cppcore/kitetools/include/conddc/: conductivity_dc.hpp
cppcore/kitetools/include/optcond_2order/: Gamma1.hpp  Gamma1photo.hpp  Gamma2.hpp  Gamma2photo.hpp  Gamma3.hpp  Gamma3photo.hpp
cppcore/kitetools/include/tools/: systemInfo.hpp
cppcore/kitetools/src/: main.cpp
cppcore/kitetools/src/CondDC/: conductivity_dc.cpp  fill.cpp
cppcore/kitetools/src/OptCond_1order/: conductivity_optical.cpp
cppcore/kitetools/src/OptCond_2order/: Gamma0photo.cpp  Gamma1.cpp  Gamma1photo.cpp  Gamma2.cpp  Gamma2photo.cpp  Gamma3.cpp  Gamma3photo.cpp  conductivity_2order.cpp
cppcore/kitetools/src/Spectral/: arpes.cpp  dos.cpp  ldos.cpp
cppcore/kitetools/src/Tools/: calculate.cpp  functions.cpp  myHDF5.cpp  parse_input.cpp  systemInfo.cpp
cppcore/kitetools/src/conddc/: conductivity_dc.cpp  fill.cpp
cppcore/kitetools/src/optcond_1order/: conductivity_optical.cpp
cppcore/kitetools/src/optcond_2order/: Gamma0photo.cpp  Gamma1.cpp  Gamma1photo.cpp  Gamma2.cpp  Gamma2photo.cpp  Gamma3.cpp  Gamma3photo.cpp  conductivity_2order.cpp
cppcore/kitetools/src/spectral/: arpes.cpp  dos.cpp  ldos.cpp
cppcore/kitetools/src/tools/: functions.cpp  myHDF5.cpp  parse_input.cpp  systemInfo.cpp
cppcore/kitex/: CMakeLists.txt  main.cpp
cppcore/kitex/include/: Generic.hpp
cppcore/kitex/include/hamiltonian/: HamiltonianDefects.hpp
cppcore/kitex/include/simulation/: Simulation.hpp  SimulationGlobal.hpp
cppcore/kitex/include/tools/: instantiate.hpp
cppcore/kitex/include/vector/: KPM_Vector.hpp
cppcore/kitex/src/hamiltonian/: Hamiltonian.cpp  HamiltonianDefects.cpp  HamiltonianRegular.cpp  HamiltonianVacancies.cpp  aux.cpp
cppcore/kitex/src/lattice/: Coordinates.cpp  LatticeStructure.cpp
cppcore/kitex/src/simulation/: Global.cpp  GlobalSimulation.cpp  Simulation.cpp  SimulationARPES.cpp  SimulationCondDC.cpp  SimulationCondOpt.cpp  SimulationCondOpt2.cpp  SimulationDOS.cpp  SimulationGaussianWavePacket.cpp  SimulationLMU.cpp  SimulationSingleShot.cpp
cppcore/kitex/src/tools/: ComplexTraits.cpp  Gamma1D.cpp  Gamma2D.cpp  Gamma3D.cpp  Random.cpp  myHDF5.cpp  queue.cpp  recursive_kpm.cpp
cppcore/kitex/src/vector/: KPM_Vector.cpp  KPM_Vector2D.cpp  KPM_Vector3D.cpp  KPM_VectorBasis.cpp
cppmodule/: CMakeLists.txt
cppmodule/src/: main.cpp
docs/: installation.md
docs/api/: kite_tools_readme.md
docs/assets/stylesheets/: landing_main.css
docs/assets/theme_override/: landing.html
docs/documentation/: index.md
docs/documentation/examples/: haldane.md
docs/documentation/more_examples/: large_systems.md
documentation/: index.html
documentation/calculation/: index.html
documentation/disorder/: index.html
documentation/editing_hdf_files/: index.html
documentation/examples/: index.html
documentation/examples/graphene/: index.html
documentation/examples/haldane/: index.html
documentation/examples/optical_conductivity/: index.html
documentation/examples/phosphorene/: index.html
documentation/magnetic/: index.html
documentation/more_examples/additional_examples/: index.html
documentation/more_examples/custom_local_potential/: index.html
documentation/more_examples/large_systems/: index.html
documentation/more_examples/paper/: index.html
documentation/optimization/: index.html
documentation/postprocessing/: index.html
documentation/settings/: index.html
documentation/tb_model/: index.html
documentation/workflow/: index.html
examples/: run_all_examples.py  test_ham_new_method.py
faq/: index.html
installation/: index.html
kite/: __about__.py  __init__.py  calculation.py  configuration.py  disorder.py  execute.py  system.py  systemold.py
kite/utils/: model.py  operator.py
tests/: lattices.py  test_arpes.py  test_conductivity.py  test_dos.py  test_guassianwavepacket.py
tests/baseline_data/arpes/: arpes[10-square-arpes].pbz  arpes[square-arpes].pbz
tests/baseline_data/conductivity/: dc[9-square-dc].pbz  optical[5-graphene-optcond].pbz  opticalnonlinear[6-graphene-optnonl].pbz  singleshotconddc[7-graphene-sconddc].pbz
tests/baseline_data/dos/: dos[0-square-speed].pbz  dos[1-square-dos].pbz  (+8 more)
tests/kitetools/: test_function.cpp
tests/kitex/: compare.py
tools/: CMakeLists.txt  process_arpes.py  process_new.py  process_single_shot.py
tools/Src/CondDC/: conductivity_dc.cpp  fill.cpp
tools/Src/OptCond_1order/: conductivity_optical.cpp
tools/Src/OptCond_2order/: Gamma0photo.cpp  Gamma1.cpp  Gamma1photo.cpp  Gamma2.cpp  Gamma2photo.cpp  Gamma3.cpp  Gamma3photo.cpp  conductivity_2order.cpp
tools/Src/Spectral/: arpes.cpp  dos.cpp  ldos.cpp
tools/Src/Tools/: calculate.cpp  functions.cpp  functions.hpp  parse_input.cpp  systemInfo.cpp
wrapper/: CMakeLists.txt
wrapper/src/: main.cpp
(+9 files in other folders)
